# john-lewis-price-alert

./: .flake8  .gitignore  Makefile  README.md  data.csv  pyproject.toml
price_alert_app/: Makefile  docker-compose.yaml  function.json  main.py  pyproject.toml  requirements.txt
price_alert_app/price_alert_func/: __init__.py  function.json
price_alert_app/scripts/: create_requirements_file.py
price_alert_app/src/: README.md  constants.py  items.py  main.py  start.py
price_alert_app/src/alert/: alert.py
price_alert_app/src/models/: models.py
price_alert_app/src/price_checker/: price_checker.py
price_alert_app/src/repository/: datastore.py
price_alert_app/tests/: conftest.py  test_items.py
price_alert_app/tests/alert/: test_alert.py
price_alert_app/tests/integration/: test_main.py
price_alert_app/tests/price_checker/: test_price_checker.py
price_alert_app/tests/repository/: test_datastore.py
src/: constants.py  main.py
src/price_checker/: price_checker.py
src/repository/: datastore.py
src/repository/price_checker/: price_checker.py
terraform/: README.md
terraform/deployments/function_app/: data.tf  main.tf  providers.tf  variables.tf
terraform/deployments/storage/: main.tf  outputs.tf  providers.tf  variables.tf
terraform/modules/function/: main.tf  variables.tf
terraform/modules/storage/: main.tf  output.tf  variables.tf
tests/: conftest.py  test_get_url.py  test_main.py
tests/price_checker/: ercol_page.html  test_price_checker.py
tests/repository/: test_datastore.py
