[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Lee Sutcliffe <lee.sutcliffe@armakuni.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
