[tool.poetry]
name = "price_alert"
version = "0.1.0"
description = ""
authors = ["Lee Sutcliffe <lee.sutcliffe@armakuni.com>"]

[tool.poetry.dependencies]
python = "^3.9"
azure-functions = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
